# DrugBank_parse

./: .gitignore  DrugBank_TDI.R  DrugBank_parse.py  README.md  drug_info.csv  test-database.xml
dev/: DrugBank_prase.py  README.md
dev/R/: DESCRIPTION  NAMESPACE  README.md
dev/R/R/: exporters.R  parser.R  paths.R  result.R  schema.R
dev/R/tests/: testthat.R
dev/R/tests/testthat/: helper-paths.R  test-exporters.R  test-parser-core.R  test-result.R  test-schema.R
dev/benchmarks/: README.md  python_benchmark.py  r_benchmark.R
dev/fixtures/expected/core/: drug_indication.csv  drug_target.csv  drugs.csv  target_drug_indication.csv  targets.csv
dev/python/: pyproject.toml
dev/python/drugbank_parse/: __init__.py  cli.py  exporters.py  models.py  parser.py  profiles.py  schema.py
dev/python/drugbank_parse/schema_data/: tables.yml
dev/python/tests/: conftest.py  test_benchmarks.py  test_cli.py  test_exporters.py  test_models.py  test_parser_core.py  test_profiles.py  test_schema.py
dev/schema/: fields.yml  profiles.yml
docs/superpowers/plans/: 2026-05-22-python-core-package.md  2026-05-23-r-core-package.md
docs/superpowers/specs/: 2026-05-22-drugbank-dev-rewrite-design.md
v1/: DrugBank_TDI.R
v2/: DrugBank_TDI_v2.R  DrugBank_parse_v2.py
vR/: DrugBank_prase.R
