[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "drugbank-parse"
version = "0.1.0"
description = "Low-memory DrugBank XML parser."
readme = "../../README.md"
requires-python = ">=3.9"
dependencies = [
  "lxml>=4.9",
  "PyYAML>=6.0",
]

[project.optional-dependencies]
test = [
  "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
